# cgraph-library

./: CMakeLists.txt  README.md  input1.txt  input2.txt  input3.txt  main.c
b/: .ninja_deps  .ninja_log
cgraph/: CMakeLists.txt  cgraph.h  cgraph_MST.c  cgraph_MST.h  cgraph_color.c  cgraph_color.h  cgraph_constructors.c  cgraph_constructors.h  cgraph_dfs.c  cgraph_dfs.h  cgraph_paths.c  cgraph_paths.h  cgraph_pruferCode.c  cgraph_pruferCode.h  cgraph_queue.c  cgraph_queue.h
cgraph/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
cgraph/get_id/: get_id.c  get_id.h
