
add_library(cgraph STATIC cgraph_queue.c)
add_library(cgraph STATIC cgraph_constructors) 
add_library(cgraph STATIC cgraph_paths.c)
add_library(cgraph STATIC cgraph_color.c)
add_library(cgraph STATIC cgraph_dfs.c)
add_library(cgraph STATIC cgraph_pruferCode.c)
add_library(cgraph STATIC cgraph_MST.c)


